--- a/index.html
+++ b/index.html
@@ -9,11 +9,36 @@
     <title>Aziz Mejri - Portfolio</title>
   </head>
   <body>
-    <header>
+    <nav id="mobile-nav">
+      <div>
+        <button type="button" class="menu-exit" onclick="handleReverse()">
+          <i class="fas fa-times fa-2x"></i>
+        </button>
+      </div>
+      <ul>
+        <li>
+          <a class="nav-link" href="#projects" onclick="handleReverse()"
+            >Portoflio</a
+          >
+        </li>
+        <li>
+          <a class="nav-link" href="#about-me" onclick="handleReverse()"
+            >About</a
+          >
+        </li>
+        <li>
+          <a class="nav-link" href="#contact" onclick="handleReverse()"
+            >Contact <i class="far fa-envelope"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
+    <header class="hide-nav-menu-mobile">
       <h1 id="logo">Aziz Mejri</h1>
-      <button type="button" class="menu-bars">
+      <button type="button" class="menu-bars" onclick="handleMenuBar()">
         <i class="fas fa-bars"></i>
       </button>
+
       <nav id="desktop-nav">
         <ul>
           <li><a class="nav-link" href="#projects">Portoflio</a></li>
@@ -26,7 +51,7 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="hide-nav-menu-mobile">
       <div id="intro">
         <div class="intro-icon">
           <img
@@ -376,7 +401,7 @@
         </form>
       </div>
     </main>
-    <footer class="social footer-social">
+    <footer class="social footer-social hide-nav-menu-mobile">
       <a
         class="social-link"
         href="https://github.com/SpaYco"
@@ -442,5 +467,6 @@
       src="https://kit.fontawesome.com/e966a3bd22.js"
       crossorigin="anonymous"
     ></script>
+    <script src="app.js"></script>
   </body>
 </html>
