fix linter errors

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       </div>
       <ul>
         <li>
-          <a class="nav-link" href="#projects" id="nav-btn">Portoflio</a>
+          <a class="nav-link" href="#projects" id="nav-btn1">Portoflio</a>
         </li>
         <li>
-          <a class="nav-link" href="#about-me" id="nav-btn">About</a>
+          <a class="nav-link" href="#about-me" id="nav-btn2">About</a>
         </li>
         <li>
-          <a class="nav-link" href="#contact" id="nav-btn"
+          <a class="nav-link" href="#contact" id="nav-btn3"
             >Contact <i class="far fa-envelope"></i
           ></a>
         </li>
